--- a/数据结构.md
+++ b/数据结构.md
@@ -664,19 +664,216 @@ int main()
 
 ## 划分树
 
-(这是啥)
+```c++
+int n,m,a[maxn],t[30][maxn],tol[30][maxn];//tol toleft
+void build(int dep=0,int l=1,int r=n)
+{
+	if (l==r) return;
+	int mid=(l+r)>>1,midv=a[mid],same=mid-l+1;
+	rep(i,l,r) if (t[dep][i]<midv) same--;
+	int lp=l,rp=mid+1;
+	rep(i,l,r)
+	{
+		int flag=0;
+		if (t[dep][i]<midv||(t[dep][i]==midv&&same>0)) 
+		{
+			flag=1;
+			if ((t[dep+1][lp++]=t[dep][i])==midv) same--;
+		}
+		else t[dep+1][rp++]=t[dep][i];
+		tol[dep][i]=tol[dep][i-1]+flag;
+	}
+	build(dep+1,l,mid);build(dep+1,mid+1,r);
+}
+int query(int dep,int k,int L,int R,int l=1,int r=n)
+{
+	if (L==R) return t[dep][L];
+	int Ltol=tol[dep][L-1]-tol[dep][l-1];
+	int Rtol=tol[dep][R]-tol[dep][l-1];
+	int Rtor=R-l-Rtol,Ltor=L-l-Ltol;
+	int cnt=Rtol-Ltol,mid=(l+r)>>1;
+	if (cnt>=k) return query(dep+1,k,l+Ltol,l+Rtol-1,l,mid);
+	else return query(dep+1,k-cnt,mid+Ltor+1,mid+Rtor+1,mid+1,r);
+}
+int main()
+{
+	read(n,m);
+	rep(i,1,n) {read(t[0][i]);a[i]=t[0][i];}
+	sort(a+1,a+n+1);
+	build();
+	rep(i,1,m)
+	{
+		int l,r,k;
+		read(l,r,k);
+		printf("%d\n",query(0,k,l,r));
+	}
+	return 0;
+}
+```
+
+另一经典题：求区间$min\{\sum_{i=l}^{r}{x-a_i}\}$
+
+显然x取中位数时取到$min$，那么答案可以表示为$(x\cdot lnum-suml)+(sumr-x\cdot rnum)$可以开辟一个累加和数组sum\[][],sum\[dep][i]表示第dep层从1到i的累加和，ans为答案。当进入左子树查找时ans+=查询区间进入右子树的元素和；当进入右子树查询时ans-=查询区间进入左子树的元素和。
 
 ## 各种树套树
 
 ## KD-Tree
 
-## (珂朵莉树)
-
-OI-Wiki上的...好像是个方便写的次暴力算法
-
 ## LCT
 
-## ~~NTT/TopTree~~
+```c++
+const int maxn=300001;
+enum child_type{non=-1,l,r};
+int n,x,y,w,m,which,xx[maxn],yy[maxn];
+int fa[maxn],ch[maxn][2];
+struct DATA
+{
+	int value,lazy,max; //truemax=max+lazy
+}data[maxn];
+bool tag[maxn];
+inline child_type ct(int x)
+{
+	if (ch[fa[x]][0]==x) return l;
+	if (ch[fa[x]][1]==x) return r;
+	return non;
+}
+inline void adjust(int x)
+{
+	data[x].max=max(data[x].value,max(data[ch[x][l]].max+data[ch[x][l]].lazy,data[ch[x][r]].max+data[ch[x][r]].lazy));
+}
+inline bool ifroot(int x){return ct(x)==non;}
+inline child_type other(child_type x){return x==non?non:(x==l?r:l);}
+inline void pushdown(int x)
+{
+	if (tag[x])
+	{
+		swap(ch[x][l],ch[x][r]);
+		tag[ch[x][l]]^=1;
+		tag[ch[x][r]]^=1;tag[x]^=1;
+	}
+	if (data[x].lazy)
+	{
+		if (ch[x][l]) data[ch[x][l]].lazy+=data[x].lazy;
+		if (ch[x][r]) data[ch[x][r]].lazy+=data[x].lazy;
+		data[x].value+=data[x].lazy;
+		data[x].lazy=0;adjust(x);
+	}
+}
+void pd2root(int x){if(!ifroot(x)) pd2root(fa[x]);pushdown(x);}
+inline void rotate(int x)
+{
+	child_type xx=ct(x);
+	if (xx==non) return;
+	int y=fa[x];child_type yy=ct(y);
+	int z=fa[y],w=ch[x][other(xx)];
+	fa[x]=z;
+	if (yy!=non) ch[z][yy]=x;
+	if (w) fa[w]=y;ch[y][xx]=w;
+	fa[y]=x;ch[x][other(xx)]=y;	
+	adjust(y);adjust(z);adjust(x);
+}
+inline void splay(int x)
+{
+	pd2root(x);
+	while (!ifroot(x))
+	{
+		if (ct(x)==ct(fa[x])){rotate(fa[x]);rotate(x);}
+		else{rotate(x);if (!ifroot(fa[x])) rotate(x);}
+	}
+	adjust(x);
+}
+inline void access(int x)
+{
+	int temp=0;
+	while (x)
+	{
+		splay(x);ch[x][r]=temp;temp=x;
+		adjust(x);x=fa[x];
+	}
+}
+inline void enroot(int x)
+{
+	access(x);splay(x);
+	tag[x]^=1;pushdown(x);
+}
+inline void link(int x,int y){enroot(x);fa[x]=y;access(x);}
+inline int root_of(int x)
+{
+	access(x);splay(x);
+	while (ch[x][l]) {pushdown(x);x=ch[x][l];}
+	return x;
+}
+inline bool same_tree(int x,int y){return root_of(x)==root_of(y);}
+inline void work(int x,int y){enroot(x);access(y);splay(y);}
+inline void cut(int x,int y){work(x,y);fa[x]=0;ch[y][l]=0;adjust(y);}
+inline void interval_add(int x,int y,int w){work(x,y);data[y].lazy+=w;}
+inline int interval_max(int x,int y)
+{
+	work(x,y);pushdown(y);
+	return data[y].lazy+data[y].max;
+}
+inline void init(){cls(ch);cls(data);cls(fa);cls(tag);}
+inline int dfs(int x)
+{
+	pd2root(x);
+	while (ch[x][r]) 
+	{
+		x=ch[x][r];
+		pushdown(x);
+	}
+	return x;
+}
+int main()
+{
+	while (~scanf("%d",&n))
+	{
+		init();
+		rep(i,1,n-1) read(xx[i],yy[i]);
+		rep(i,1,n) {read(x);data[i].value=x;data[i].max=x;}
+		rep(i,1,n-1) link(xx[i],yy[i]);
+		read(m);
+		rep(i,1,m)
+		{
+			read(which);
+			if (which==1)
+			{
+				read(x,y);
+				// 1、如果x和y不在同一棵树上则在xy连边
+				if (same_tree(x,y)) puts("-1");
+				else link(x,y);
+			}
+			else if (which==2)
+			{
+				read(x,y);
+				// 2、如果x和y在同一棵树上并且x!=y则把x换为树根并把y和y的父亲分离
+				if (same_tree(x,y)&&x!=y) 
+				{
+					enroot(x);access(y);splay(y);
+					cut(y,dfs(ch[y][l]));
+				}
+				else puts("-1");
+			}
+			else if (which==3)
+			{
+				read(w);
+				read(x,y);
+				// 3、如果x和y在同一棵树上则x到y的路径上所有的点权值+w
+				if (same_tree(x,y)) interval_add(x,y,w);
+				else puts("-1");
+			}
+			else
+			{
+				read(x,y);
+				// 4、如果x和y在同一棵树上则输出x到y路径上的最大值
+				if (same_tree(x,y)) printf("%d\n",interval_max(x,y));
+				else puts("-1");
+			}
+		}
+		putchar('\n');
+	}
+	return 0;
+}
+```
 
 ## pb_ds通用头
 
