--- a/数据结构.md
+++ b/数据结构.md
@@ -364,6 +364,161 @@ sgt t;
 
 对于随机数据应该是常数最小的平衡树了
 
+## Treap
+
+```c++
+const int maxn=100001;
+struct TREAP
+{
+	struct node
+	{
+		int l,r,data,key,size;
+	}t[maxn];
+	int root=0,num=0;
+	void update(int x){t[x].size=t[t[x].l].size+t[t[x].r].size+1;}
+	pairs split(int a,int n)
+	{
+		if (n==0) return mp(0,a);
+		int l=t[a].l,r=t[a].r;
+		if (n==t[l].size) 
+		{
+			t[a].l=0;
+			update(a);
+			return mp(l,a);
+		}
+		else if (n==t[l].size+1)
+		{
+			t[a].r=0;
+			update(a);
+			return mp(a,r);
+		}
+		else if (n<t[l].size)
+		{
+			pairs tmp=split(l,n);
+			t[a].l=tmp.second;
+			update(a);
+			return mp(tmp.first,a);
+		}
+		pairs tmp=split(r,n-t[l].size-1);
+		t[a].r=tmp.first;
+		update(a);
+		return mp(a,tmp.second);
+	}
+	int merge(int a,int b)
+	{
+		if (a==0||b==0) return a+b;
+		if (t[a].key<t[b].key)
+		{
+			t[a].r=merge(t[a].r,b);
+			update(a);
+			return a;
+		}
+		else
+		{
+			t[b].l=merge(a,t[b].l);
+			update(b);
+			return b;
+		}
+	}
+	int rank(int x,int k)
+	{
+		int ans=0,tmp=inf;
+		while (k)
+		{
+			if (x==t[k].data) tmp=min(tmp,ans+t[t[k].l].size+1);
+			if (x>t[k].data) ans+=t[t[k].l].size+1,k=t[k].r;
+			else k=t[k].l;
+		}
+		return tmp==inf?ans:tmp;
+	}
+	int rankk(int x,int k)
+	{
+		int ans=0,tmp=inf;
+		while (k)
+		{
+			if (x==t[k].data) tmp=min(tmp,ans+t[t[k].l].size+1);
+			if (x>t[k].data) ans+=t[t[k].l].size+1,k=t[k].r;
+			else k=t[k].l;
+		}
+		return tmp;
+	}
+	int rank(int x){return rankk(x,root);}//return rank of y
+	int find(int x,int k)
+	{
+		if (x>size()||x==0) return inf;
+		while (1)
+		{
+			if (t[t[k].l].size==x-1) return t[k].data;
+			if (t[t[k].l].size>x-1) k=t[k].l;
+			else x=x-t[t[k].l].size-1,k=t[k].r;
+		}
+	}
+	int find(int x){return find(x,root);}//return yth 
+	int pre(int x,int k)
+	{
+		int ans=-inf;
+		while (k)
+		{
+			if (t[k].data<x) ans=max(ans,t[k].data),k=t[k].r;
+			else k=t[k].l;
+		}
+		return ans;
+	}
+	int pre(int x){return pre(x,root);}
+	int suc(int x,int k)
+	{
+		int ans=inf;
+		while (k)
+		{
+			if (t[k].data>x) ans=min(ans,t[k].data),k=t[k].l;
+			else k=t[k].r;
+		}
+		return ans;
+	}
+	int suc(int x){return suc(x,root);}
+	void insert(int x)
+	{
+		int k=rank(x,root);
+		pairs tmp=split(root,k);
+		t[++num].data=x;
+		t[num].key=(int)(rand()*rand());
+		t[num].size=1;
+		root=merge(tmp.first,num);
+		root=merge(root,tmp.second);
+	}
+	void erase(int x)
+	{
+		int k=rankk(x,root);
+		if (k==inf) return;
+		pairs t1=split(root,k),t2=split(t1.first,k-1);
+		root=merge(t2.first,t1.second);
+	}
+	int size(){return t[root].size;}
+}T;
+int n;
+int main()
+{
+	read(n);
+	rep(i,1,n) 
+	{
+		int opt,y;
+		read(opt,y);
+		switch (opt)
+		{
+			case 1:T.insert(y);break;
+			case 2:T.erase(y);break;
+			case 3:printf("%d\n",T.rank(y));break;//return rank of y
+			case 4:printf("%d\n",T.find(y));break;//return yth 
+			case 5:printf("%d\n",T.pre(y));break;
+			case 6:printf("%d\n",T.suc(y));break;
+		}
+	}
+	return 0;
+}
+```
+
+
+
 ## pb_ds tree
 
 标准写法：
@@ -596,7 +751,7 @@ int main()
 #include <ext/rope>
 int n,now,len;
 __gnu_cxx::rope <char> a,b,c;//b is reversed
-char s[2000000],rs[2000000];//1234567 654321
+char s[2000000],rs[2000000];//1234567 7654321
 int main()
 {
 	scanf("%d",&n);
@@ -718,6 +873,471 @@ int main()
 ## 各种树套树
 
 ## KD-Tree
+
+k维静态 询问第m近 kdtree+priority_queue
+
+```c++
+#define sqr(x) ((x)*(x))
+const int maxv=200001,maxk=10;
+int coor[maxv][maxk],given[maxk],m,ans[maxv],n,k,t,whichd;
+struct NODE
+{
+	int which;
+	bool operator <(const NODE &x)const
+	{
+		return coor[which][whichd]<coor[x.which][whichd];
+	}
+}node[maxv];
+void build_kdtree(int l,int r,int d)
+{
+	if (l>r) return;whichd=d;int mid=l+r>>1;
+	nth_element(node+l,node+mid,node+r+1);
+	build_kdtree(l,mid-1,d%k+1);
+	build_kdtree(mid+1,r,d%k+1);
+}
+LL dis(const NODE &a)
+{
+	LL res=0;
+	rep(i,1,k) res+=sqr(coor[a.which][i]-given[i]);
+	return res;
+}
+priority_queue<pair<LL,int> > q;
+void doit(int l,int r,int d)
+{
+	if (l>r) return;
+	int mid=l+r>>1;
+	pair<LL,int> v=make_pair(dis(node[mid]),node[mid].which);
+	if (q.size()==m&&v<q.top()) q.pop();
+	if (q.size()<m) q.push(v);
+	LL t=given[d]-coor[node[mid].which][d];
+	if (t<=0)
+	{
+		doit(l,mid-1,d%k+1);
+		if (q.top().first>t*t) doit(mid+1,r,d%k+1);
+	}
+	else
+	{
+		doit(mid+1,r,d%k+1);
+		if (q.top().first>t*t) doit(l,mid-1,d%k+1);
+	}
+}
+inline void solve(int m)
+{
+	rep(i,1,m) q.push(make_pair(1e18,-1));
+	doit(1,n,1);int tot=0;
+	while (!q.empty())
+	{
+		ans[++tot]=q.top().second;
+		q.pop();
+	}
+	per(i,tot,1) rep(j,1,k) printf("%d%c",coor[ans[i]][j],j==k?'\n':' ');
+}
+int main()
+{
+	while (scanf("%d%d",&n,&k)!=EOF)// n:number of points;k:number of dimentions
+	{
+		rep(i,1,n)
+		{
+			rep(j,1,k) read(coor[i][j]);
+			node[i].which=i;
+		}
+		build_kdtree(1,n,1);read(t);
+		rep(i,1,t) 
+		{
+			rep(j,1,k) read(given[j]);read(m);
+			printf("the closest %d points are:\n",m);
+			solve(m);
+		}
+	}
+	return 0;
+}
+```
+
+bzoj2648 洛谷P4169 带插入的二维曼哈顿距离替罪羊式kdtree(如果是欧拉距离需要把子树mn/mx的存方块大小的优化删去，同时querycore里面也要改)
+
+```c++
+const int maxn=600001;
+const double alpha=0.6;
+int n,doing,m,ans;
+bool now;
+struct POINT
+{
+	int x,y;
+}point[maxn];
+struct Node
+{
+	Node *l,*r,*fa;
+	POINT mn,mx;
+	int id,num,d;
+	bool operator<(const Node &other)const
+	{
+		if (now) return point[id].x<point[other.id].x;
+		else return point[id].y<point[other.id].y;
+	}
+	void pushup()
+	{
+		num=(l?l->num:0)+(r?r->num:0)+1;
+		mx=mn=point[id];
+		if (r) 
+		{
+			r->fa=this;
+			mn.x=min(mn.x,r->mn.x);mn.y=min(mn.y,r->mn.y);
+			mx.x=max(mx.x,r->mx.x);mx.y=max(mx.y,r->mx.y);
+		}
+		if (l) 
+		{
+			l->fa=this;
+			mn.x=min(mn.x,l->mn.x);mn.y=min(mn.y,l->mn.y);
+			mx.x=max(mx.x,l->mx.x);mx.y=max(mx.y,l->mx.y);
+		}
+
+	}
+	bool isbad()
+	{
+		return ((l?(l->num>num*alpha+5):0)||(r?(r->num>num*alpha+5):0));
+	}
+}node[maxn];
+bool cmp(const Node *x,const Node *y)
+{
+	if (now) return point[x->id].x<point[y->id].x;
+	else return point[x->id].y<point[y->id].y;
+}
+struct kd_tree
+{
+	Node *root;
+	void init(const int &vv)
+	{
+		rep(i,1,vv) node[i].id=i;
+	}
+	Node *build(const int &l,const int &r,const bool &d)
+	{
+		if (l==r) 
+		{
+			node[l].l=node[l].r=0;
+			node[l].num=1;
+			node[l].d=d;
+			node[l].mx=node[l].mn=point[node[l].id];
+			return node+l;
+		}
+		else if (l>r) return 0;
+		now=d;
+		int mid=(l+r)>>1;
+		nth_element(node+l,node+mid,node+r+1);
+		node[mid].l=build(l,mid-1,d^1);
+		node[mid].r=build(mid+1,r,d^1);
+		node[mid].pushup();
+		node[mid].d=d;
+		return &node[mid];
+	} 
+	Node *insertcore(Node *nowp,const int &x)
+	{
+		if (!nowp) return 0;
+		Node *res=0;
+		if (nowp->d?point[x].x<point[nowp->id].x:point[x].y<point[nowp->id].y)
+		{
+			if (nowp->l) res=insertcore(nowp->l,x);
+			else {nowp->l=&node[x];nowp->l->d=nowp->d^1;}
+		}
+		else 
+		{
+			if (nowp->r) res=insertcore(nowp->r,x);
+			else {nowp->r=&node[x];nowp->r->d=nowp->d^1;}
+		}
+		nowp->pushup();
+		if (nowp->isbad()) res=nowp;
+		return res;
+	}
+	void travel(Node *p,vector<Node*> &v)
+	{
+		if (!p) return;
+		if (p->l) travel(p->l,v);
+		v.push_back(p);
+		if (p->r) travel(p->r,v);
+	}
+	Node *rebuildcore(int d,vector<Node*> &v,const int &l,const int &r)
+	{
+		if (l==r) 
+		{
+			v[l]->l=v[r]->r=0;
+			v[l]->num=1;v[l]->d=d;
+			v[l]->mn=point[v[l]->id];
+			v[l]->mx=point[v[l]->id];
+			return v[l];
+		}
+		else if (l>r) return 0;
+		now=d;
+		int mid=(l+r)>>1;
+		nth_element(v.begin()+l,v.begin()+mid,v.begin()+r+1,cmp);
+		v[mid]->l=rebuildcore(d^1,v,l,mid-1);
+		v[mid]->r=rebuildcore(d^1,v,mid+1,r);
+		v[mid]->pushup();v[mid]->d=d;
+		return v[mid];
+	}
+	Node *rebuild(Node *&p)
+	{
+		static vector<Node*> v;
+		v.clear();
+		travel(p,v);
+		p=rebuildcore(p->d,v,0,v.size()-1);
+		return p;
+	}
+	void insert(const int &x)
+	{
+		node[x].id=x;node[x].num=1;node[x].mn=node[x].mx=point[x];
+		Node *res=insertcore(root,x);
+		if (res!=0)
+		{
+			if (res==root) {root=rebuild(res);root->fa=root;}
+			else if (res->fa->l==res) res->fa->l=rebuild(res);
+			else res->fa->r=rebuild(res);
+		}
+	}
+	int dis(const int &x)
+	{
+		return abs(point[x].x-point[doing].x)+abs(point[x].y-point[doing].y);
+	}
+	int getdis(Node *x) 
+	{
+		int xx=max(0,x->mn.x-point[doing].x)+max(0,point[doing].x-x->mx.x);
+		int yy=max(0,x->mn.y-point[doing].y)+max(0,point[doing].y-x->mx.y);
+		return xx+yy;
+	}
+	void querycore(const Node *x)
+	{
+		if (!x) return;
+		ans=min(ans,dis(x->id));
+		int dl=inf,dr=inf;
+		if (x->l) dl=getdis(x->l);
+		if (x->r) dr=getdis(x->r);
+		if (dl<dr) 
+		{
+			if (dl<ans) querycore(x->l);
+			if (dr<ans) querycore(x->r);
+		}
+		else
+		{
+			if (dr<ans) querycore(x->r);
+			if (dl<ans) querycore(x->l);
+		}
+	}
+	int query(const int &x)
+	{
+		ans=inf;doing=x;querycore(root);
+		return ans;
+	}
+}kdtree;
+int main()
+{
+	read(n,m);
+	kdtree.init(n+m);
+	rep(i,1,n) read(point[i].x,point[i].y);
+	kdtree.root=kdtree.build(1,n,1);
+	kdtree.root->fa=kdtree.root;
+	int tt;
+	rep(i,n+1,n+m)
+	{
+		read(tt);
+		read(point[i].x,point[i].y);
+		if (tt==2) 
+		{
+			printf("%d\n",kdtree.query(i));
+			i--;n--;
+		}
+		else kdtree.insert(i);
+		//if ((i-n)%10000==0) {kdtree.init(i);kdtree.root=kdtree.build(1,i,1);}
+		//每隔10000重构一次，91分
+	}
+	return 0;
+}
+```
+
+BZOJ4066 洛谷P4148 简单题
+
+N*N的棋盘，两种操作 一种是某个点值+A,一种是询问矩形数字和，强制在线
+
+用\(KD-Tree\)维护每一个点，每次询问的时候判断询问的矩形和当前矩形的交。如果全部覆盖直接加上所有的和。如果没有交则直接返回，如果有部分交则递归处理。需要替罪羊式优化。
+
+## 树链剖分
+
+```c++
+const int maxn=50001;
+int n,a[maxn],m,p;
+struct HeavyLightTree
+{
+	int nxt[maxn<<1],to[maxn<<1],first[maxn],cnt,fa[maxn],root;
+	int son[maxn],dep[maxn],siz[maxn],top[maxn],tot,pos[maxn],ipos[maxn];
+	int value[maxn<<2],lazy[maxn<<2];
+	void addedge(int u,int v){nxt[++cnt]=first[u];first[u]=cnt;to[cnt]=v;}
+	void addedge2(int u,int v){addedge(u,v);addedge(v,u);}
+	void pushup(int x,int num)
+	{
+		if (num==1) return;
+		value[x]=(value[x<<1]+value[x<<1|1]+((num+1)>>1)*lazy[x<<1]+(num-((num+1)>>1))*lazy[x<<1|1]);
+	}
+	void pushdown(int x)
+	{
+		if (lazy[x])
+		{
+			lazy[x<<1]+=lazy[x];
+			lazy[x<<1|1]+=lazy[x];
+			lazy[x]=0;
+		}
+	}
+	int dfs1(int depth,int x)
+	{
+		dep[x]=depth;siz[x]=0;
+		int maxx=0;
+		for (int q=first[x];q;q=nxt[q])
+		{
+			if (to[q]==fa[x]) continue;
+			fa[to[q]]=x;
+			int temp=dfs1(depth+1,to[q]);
+			if (temp>maxx)
+			{
+				maxx=temp;
+				son[x]=to[q];
+			}
+			siz[x]+=temp;
+		}
+		return ++siz[x];
+	}
+	void dfs2(int x)
+	{
+		if (son[x])
+		{
+			top[son[x]]=top[x];
+			pos[son[x]]=++tot;
+			dfs2(son[x]);
+		}
+		for (int q=first[x];q;q=nxt[q])
+		{
+			if (to[q]==fa[x]||to[q]==son[x]) continue;
+			top[to[q]]=to[q];
+			pos[to[q]]=++tot;
+			dfs2(to[q]);
+		}
+	}
+	void buildtree(int x,int l,int r)
+	{
+		lazy[x]=0;
+		if (l==r) {value[x]=a[ipos[l]];return;}
+		int mid=(l+r)>>1;
+		buildtree(x<<1,l,mid);buildtree((x<<1)+1,mid+1,r);
+		pushup(x,r-l+1);
+	}	
+	int qseg(int x,int l,int r,int L,int R)
+	{
+		if (l==L&&r==R) return (value[x]+(LL)lazy[x]*(r-l+1));
+		pushdown(x);pushup(x,r-l+1);
+		int mid=(l+r)>>1;
+		if (L>mid) return qseg(x<<1|1,mid+1,r,L,R);
+		else if (R<=mid) return qseg(x<<1,l,mid,L,R);
+		else return (qseg(x<<1,l,mid,L,mid)+qseg(x<<1|1,mid+1,r,mid+1,R));
+	}
+	void cseg(int x,int l,int r,int L,int R,const int &v)
+	{
+		if (L==l&&R==r) {lazy[x]=(lazy[x]+v);return;}
+		pushdown(x);pushup(x,r-l+1);
+		int mid=(l+r)>>1;
+		if (L>mid) cseg(x<<1|1,mid+1,r,L,R,v);
+		else if (R<=mid) cseg(x<<1,l,mid,L,R,v);
+		else 
+		{
+			cseg(x<<1,l,mid,L,mid,v);
+			cseg(x<<1|1,mid+1,r,mid+1,R,v);
+		}
+		pushup(x,r-l+1);
+	}
+	void change(int x,int y,const int &v)
+	{
+		int f1=top[x],f2=top[y];
+		if (f1!=f2)
+		{
+			if (dep[f1]<dep[f2]) {swap(f1,f2);swap(x,y);}
+			cseg(1,1,n,pos[f1],pos[x],v);
+			change(fa[f1],y,v);
+		}
+		else
+		{
+			if (pos[x]>pos[y]) swap(x,y);
+			cseg(1,1,n,pos[x],pos[y],v);
+		}
+	}
+	void change_subtree(int x,int v)
+	{
+		cseg(1,1,n,pos[x],pos[x]+siz[x]-1,v);
+	}
+	int query(int x,int y)
+	{
+		int res=0;
+		int f1=top[x],f2=top[y];
+		if (f1!=f2)
+		{
+			if (dep[f1]<dep[f2]) {swap(f1,f2);swap(x,y);}
+			res+=qseg(1,1,n,pos[f1],pos[x]);
+			res+=query(fa[f1],y);
+		}
+		else
+		{
+			if (pos[x]>pos[y]) swap(x,y);
+			res+=qseg(1,1,n,pos[x],pos[y]);
+		}
+		return res;
+	}
+	int query_subtree(int x)
+	{
+		return qseg(1,1,n,pos[x],pos[x]+siz[x]-1);
+	}
+	void clear()
+	{
+		clr(first);cnt=0;
+		clr(son);
+	}
+	void init()
+	{
+		root=1;
+		fa[root]=root;
+		siz[root]=dfs1(1,root);
+		tot=1;pos[root]=tot;
+		top[root]=root;
+		dfs2(root);
+		rep(i,1,n) ipos[pos[i]]=i;
+		buildtree(1,1,n);
+	}
+}tree;
+int main()
+{
+	while (~scanf("%d%d%d",&n,&m,&p))
+	{
+		rep(i,1,n) read(a[i]);
+		tree.clear();
+		rep(i,1,m) {int u,v;read(u,v);tree.addedge2(u,v);}
+		tree.init();
+		rep(i,1,p)
+		{
+			char ch[2];
+			scanf("%s",ch);
+			int c1,c2,k;
+			if (ch[0]=='I')
+			{
+				read(c1,c2,k);
+				tree.change(c1,c2,k);
+			}
+			else if (ch[0]=='D')
+			{
+				read(c1,c2,k);
+				tree.change(c1,c2,-k);
+			}
+			else//ch=='Q'
+			{
+				read(k);
+				printf("%d\n",tree.query(k,k));
+			}
+		}
+	}
+	return 0;
+}
+```
 
 ## LCT
 
